@@ -3,6 +3,7 @@
 - Add a Welcome screen instead of quitting when last tab is closed
 - Fixed pressing shift+number in guitar editor in Cocoa
 - use sheet dialogs on OSX
+- Fixed some placement issues with silences in printed scores
 - Minor fixes in new OSX player code
 
 1.3 beta 1
